cloudformation/memGiraffeProdCloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpce6e00183": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.248.132.0/22",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "membership-vpc"
          }
        ]
      }
    },
    "subnet179e8063": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.248.134.0/24",
        "AvailabilityZone": "eu-west-1c",
        "VpcId": {
          "Ref": "vpce6e00183"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "membership public subnet C"
          }
        ]
      }
    },
    "subnetcb91ae8d": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.248.132.0/24",
        "AvailabilityZone": "eu-west-1a",
        "VpcId": {
          "Ref": "vpce6e00183"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "membership public subnet A"
          }
        ]
      }
    },
    "subneta7b74ac2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.248.133.0/24",
        "AvailabilityZone": "eu-west-1b",
        "VpcId": {
          "Ref": "vpce6e00183"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "membership public subnet B"
          }
        ]
      }
    },
    "igw91938ff3": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "membership-internet-gw"
          }
        ]
      }
    },
    "dopt6debff0f": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "eu-west-1.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl0974966c": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpce6e00183"
        }
      }
    },
    "rtba9d33ecc": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpce6e00183"
        }
      }
    },
    "rdsmemgiraffeprod": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "100",
        "AllowMajorVersionUpgrade": "false",
        "AutoMinorVersionUpgrade": "true",
        "AvailabilityZone": "eu-west-1b",
        "DBInstanceClass": "db.m3.medium",
        "Port": "5432",
        "PubliclyAccessible": "true",
        "StorageType": "standard",
        "BackupRetentionPeriod": "7",
        "MasterUsername": "memGiraffeProd",
        "MasterUserPassword": "HpXGFyGEC6SEMg3uU28d",
        "PreferredBackupWindow": "03:07-03:37",
        "PreferredMaintenanceWindow": "wed:22:10-wed:22:40",
        "DBName": "memGiraffeProd",
        "Engine": "postgres",
        "EngineVersion": "9.5.2",
        "StorageEncrypted" : "true",
        "LicenseModel": "postgresql-license",
        "DBSubnetGroupName": {
          "Ref": "dbsubnetdefaultvpce6e00183"
        },
        "VPCSecurityGroups": [
          {
            "Ref": "sgMemPostgreSQL"
          }
        ],
        "Tags": [
          {
            "Key": "workload-type",
            "Value": "other"
          }
        ]
      }
    },
    "dbsubnetdefaultvpce6e00183": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Created from the RDS Management Console",
        "SubnetIds": [
          {
            "Ref": "subnet179e8063"
          },
          {
            "Ref": "subnetcb91ae8d"
          },
          {
            "Ref": "subneta7b74ac2"
          }
        ]
      }
    },
    "sgMemPostgreSQL": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "A security group to connect to PostGreSQL databases on the membership VPC",
        "VpcId": {
          "Ref": "vpce6e00183"
        }
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0974966c"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0974966c"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0974966c"
        },
        "SubnetId": {
          "Ref": "subnet179e8063"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0974966c"
        },
        "SubnetId": {
          "Ref": "subnetcb91ae8d"
        }
      }
    },
    "subnetacl3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0974966c"
        },
        "SubnetId": {
          "Ref": "subneta7b74ac2"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpce6e00183"
        },
        "InternetGatewayId": {
          "Ref": "igw91938ff3"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtba9d33ecc"
        },
        "GatewayId": {
          "Ref": "igw91938ff3"
        }
      },
      "DependsOn": "gw1"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpce6e00183"
        },
        "DhcpOptionsId": {
          "Ref": "dopt6debff0f"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgMemPostgreSQL"
        },
        "IpProtocol": "tcp",
        "FromPort": "5432",
        "ToPort": "5432",
        "CidrIp": "10.248.132.0/24"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgMemPostgreSQL"
        },
        "IpProtocol": "tcp",
        "FromPort": "5432",
        "ToPort": "5432",
        "CidrIp": "10.248.133.0/24"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgMemPostgreSQL"
        },
        "IpProtocol": "tcp",
        "FromPort": "5432",
        "ToPort": "5432",
        "CidrIp": "10.248.134.0/24"
      }
    },
    "ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgMemPostgreSQL"
        },
        "IpProtocol": "tcp",
        "FromPort": "5432",
        "ToPort": "5432",
        "CidrIp": "77.91.248.0/21"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgMemPostgreSQL"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": ""
}
